@startuml
'https://plantuml.com/class-diagram
hide circle
class DeviceRepository <<interface>>


class Device{
    -macAddress
    -name
    -description
}
class DeviceViewMapper{
    +toDeviceView(Device device): DeviceView
}
class DeviceController{
    upsert(WebRequest request, String macAddress, EditDeviceRequest resource, final MultipartFile file):ResponseEntity<DeviceView>
    }
class DeviceService{
 +update(String macAddress, EditDeviceRequest resource, DeviceImage deviceImage, long desiredVersion): Device

}

interface DeviceRepository
{
+findByMacAddress_MacAddress(String macAddress): Optional<Device>
+save(S entity) : <S extends Device>
}



DeviceController ..> DeviceService: uses >
DeviceService ..> DeviceRepository: uses >
DeviceRepository ..> Device: < record
DeviceController ..>DeviceViewMapper: uses >
@enduml
